# ChessKit

./: .gitignore  CMakeLists.txt  conanfile.txt
include/ChessKit/: Chess.h
src/: Chess.Test.cpp  Chess.cpp
